fix: block overflow-x on body

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
     background: white;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    overflow-x: hidden;
 }
 
 header {
